# gpt-task

./: .gitignore  README.md  generate_json_schema.py  pyproject.toml  requirements.txt  requirements_cuda.txt  requirements_macos.txt
examples/: chat_template_example.py  chatglm_example.py  config_example.py  gpt2_example.py  gpt2_with_cache_example.py  mistral_example.py  qwen_example.py  streaming_example.py  streaming_tool_call_example.py  tool_call_example.py
schema/: gpt-inference-task.json
src/gpt_task/: config.py  download.py  prefetch.py
src/gpt_task/cache/: __init__.py  abc.py  memory_impl.py
src/gpt_task/inference/: __init__.py  errors.py  inference.py  key.py  utils.py
src/gpt_task/models/: __init__.py  args.py  utils.py
