[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt_task"
authors = [{ name = "lukew", email = "lukew@crynux.ai" }]
description = "A general framework to define and execute the GPT text generation task."
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3"]
version = "0.0.1"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "transformers",
    "transformers_stream_generator",
    "sentencepiece",
    "accelerate",
    "bitsandbytes",
    "tiktoken",
    "einops",
    "pydantic",
    "pydantic-settings"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gpt_task*"]
